--- a/src/Core/BookstoreApp.Application/BookstoreApp.Application.csproj
+++ b/src/Core/BookstoreApp.Application/BookstoreApp.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="../BookstoreApp.Domain/BookstoreApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+  </ItemGroup>
+
 </Project>
