--- a/src/Infrastructure/BookstoreApp.Persistense/BookstoreApp.Persistense.csproj
+++ b/src/Infrastructure/BookstoreApp.Persistense/BookstoreApp.Persistense.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../Core/BookstoreApp.Domain/BookstoreApp.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    <PackageReference Include="Npgsql" Version="3.1.7" />
+  </ItemGroup>
+
 </Project>
