--- a/src/Presenters/BookstoreApp.WebApi/BookstoreApp.WebApi.csproj
+++ b/src/Presenters/BookstoreApp.WebApi/BookstoreApp.WebApi.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="System.Data.SQLite" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../../Core/BookstoreApp.Application/BookstoreApp.Application.csproj" />
+    <ProjectReference Include="../../Core/BookstoreApp.Domain/BookstoreApp.Domain.csproj" />
+    <ProjectReference Include="../../Infrastructure/BookstoreApp.Persistense/BookstoreApp.Persistense.csproj" />
   </ItemGroup>
 
 </Project>
